apps/oxlint/src/snapshots/fixtures__invalid_config_extra_options_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/invalid_config_extra_options
----------
Failed to parse oxlint configuration file.

  x Invalid configuration for rule `jest/no-hooks`: unknown field `foo`, expected `allow`, received `{ "foo": "bar" }`
  | 

----------
CLI result: InvalidOptionConfig
----------
