apps/oxlint/src/snapshots/fixtures__invalid_config_multiple_rules_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/invalid_config_multiple_rules
----------
Failed to parse oxlint configuration file.

  x Invalid configuration for rule `import/no-absolute-path`: unknown field `foobar`, expected one of `esmodule`, `commonjs`, `amd`, received `{ "foobar": true }`
  | Invalid configuration for rule `import/no-duplicates`: invalid type: string "maybe", expected a boolean, received `{ "preferInline": "maybe" }`
  | Invalid configuration for rule `jest/no-hooks`: unknown field `foo`, expected `allow`, received `{ "foo": "bar" }`
  | Invalid configuration for rule `no-cond-assign`: invalid type: integer `123`, expected string or map, received `123`
  | Invalid configuration for rule `no-console`: unknown field `extra`, expected `allow`, received `{ "allow": [ "info" ], "extra": "value" }`
  | Invalid configuration for rule `no-return-assign`: unknown variant `foobar`, expected `always` or `except-parens`, received `"foobar"`
  | Invalid configuration for rule `typescript/consistent-indexed-object-style`: invalid type: boolean `true`, expected string or map, received `true`
  | Invalid configuration for rule `vitest/consistent-vitest-vi`: unknown variant `other`, expected `vi` or `vitest`, received `{ "fn": "other" }`
  | Invalid configuration for rule `vue/define-emits-declaration`: unknown variant `declaration`, expected one of `type-based`, `type-literal`, `runtime`, received `{ "declaration": 0 }`

----------
CLI result: InvalidOptionConfig
----------
