apps/oxlint/src/snapshots/fixtures__issue_11054_-c .oxlintrc.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c .oxlintrc.json
working directory: fixtures/issue_11054
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file using 1 threads.
----------
CLI result: LintSucceeded
----------
